# rustySpamDetector

./: Cargo.toml  README.md
src/: corelib.rs  lib.rs  main.rs
